syntax = "proto3";

package cart;

option go_package = "github.com/fjod/go_cart/cart-service/pkg/proto";

// Cart item represents what user adds to cart
message CartItem {
  int64 product_id = 1;
  int32 quantity = 2;
  string added_at = 3;  // RFC3339 format
}

message Cart{
  string id = 1;
  int64 user_id = 2;
  repeated CartItem cart = 3;
  string created_at = 4;  // RFC3339 format
  string updated_at = 5;  // RFC3339 format
}

// Request to add item
message AddCartItemRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message GetCartRequest {
  int64 user_id = 1;
}

// Request to update item quantity
message UpdateQuantityRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

// Request to remove item from cart
message RemoveItemRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

// Request to clear entire cart
message ClearCartRequest {
  int64 user_id = 1;
}

// Response
message CartResponse {
  Cart cart = 1;
}

// Cart service definition
service CartService {
  rpc AddItem(AddCartItemRequest) returns (CartResponse);
  rpc GetCart(GetCartRequest) returns (CartResponse);
  rpc UpdateQuantity(UpdateQuantityRequest) returns (CartResponse);
  rpc RemoveItem(RemoveItemRequest) returns (CartResponse);
  rpc ClearCart(ClearCartRequest) returns (CartResponse);
}